@@ -44,6 +44,7 @@
  *
  * @version 1.8
  * @date    March 2013
+ * Remove 'searchform.php' template in favor of using WordPress core version
  *
  * @todo Custom Header Images - further work is required to add appropriate code to make use of the existing child themes available from http://buynowshop.com/themes/nona/
  * @todo Review date.php template for better ways to incorporate end-user time and date settings
