@@ -1,7 +1,8 @@
 === NoNa ===
 == Version 1.8 ==
-Changelog: March 13, 2013
+Changelog: March 14, 2013
 = Code =
+* Remove 'searchform.php' template in favor of using WordPress core version
 
 = CSS =
 
